# SCRAPY-EX

./: .gitignore  README.md  pyproject.toml
doc/: scrapy export.md  scrapy framework.md  scrapy items.md  scrapy pipeline.md  scrapy selector.md  scrapy settings.md  scrapy shell.md  scrapy 시작하기.md  scrapy 실습 2.md  scrapy 실습1.md  selector 팁.md
section01_2/section01_2/: middlewares.py  pipelines.py  settings.py
section01_2/section01_2/spiders/: testspider.py
section02_1/: result.csv  result.jl
section02_1/section02_1/: middlewares.py  pipelines.py  settings.py
section02_1/section02_1/spiders/: class02_1.py
section02_2/: result.csv  result.jl
section02_2/section02_2/: middlewares.py  pipelines.py
section02_2/section02_2/spiders/: class02_2.py
section03_2/: result.jl
section03_2/section03_2/: middlewares.py  pipelines.py  settings.py
section03_2/section03_2/spiders/: class03_2.py
section03_3/: result.csv
section03_3/section03_3/: middlewares.py  pipelines.py
section03_3/section03_3/spiders/: class03_3.py
section03_4/: result.jl  result.json
section03_4/section03_4/: pipelines.py
section03_5/: result.json
section03_5/section03_4/: settings.py
section03_5/section03_5/: items.py  middlewares.py  settings.py
section04_1/: result.json
section04_1/section04_1/: middlewares.py  pipelines.py  settings.py
section04_2/: result.jl
section04_2/section04_2/: middlewares.py  pipelines.py  settings.py
section04_3/: result.json  result_csv.csv  result_excel.xlsx
section04_3/section04_3/: items.py  pipelines.py  settings.py
(+5 files in other folders)
