[tool.poetry]
name = "scrapy_ex"
version = "0.1.0"
description = ""
authors = ["hbyyy <qjaduddl94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
scrapy-djangoitem = "^1.1.1"
Scrapy = "^2.1.0"
django = "^3.0.7"
notebook = "^6.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
